syntax = "proto3";

option java_multiple_files = true;
option java_package = "co.overlead.gRPC";
option java_outer_classname = "team";
option objc_class_prefix = "t";
package teamtask;

service Team {
    rpc addNewTeam (AddNewTeamReq) returns (TeamReq) {
    }
    rpc updateTeamTask (UpdateTeamReq) returns (TeamReq) {
    }
    rpc deleteTeam (DeleteTeamReq) returns (TeamReq){}

    rpc addMember (AddMemberReq) returns (TeamReq) {
    }
    rpc removeMember (RemoveMemberReq) returns (TeamReq) {
    }
    rpc updateMember (UpdateMemberReq) returns (TeamReq) {
    }
    rpc getAllMember (GetAllMemberReq) returns (stream TeamReq) {
    }
}

message TeamReq {
    string status = 1;
    string id = 2;
    string error = 3;
    string option = 4;
}
message AddNewTeamReq {
    string requesterId = 1;
    string projectId = 2;
    string name = 3;
    string description = 4;
    string department = 5;
    string accessToken = 6;
}


message UpdateTeamReq {
    string requesterId = 1;
    string teamId = 2;
    string name = 3;
    string description = 4;
    string department = 5;
    string accessToken = 6;
}
message DeleteTeamReq {
    string requesterId = 1;
    string teamId = 2;
    string projectId = 3;
    string accessToken = 4;
}

message AddMemberReq {
    string requesterId = 1;
    string teamId = 3;
    string role=2;
    string memberEmail = 5; // them username vao assignee cua teamtaskId dc chon
    string accessToken = 4;
}

message RemoveMemberReq {
    string requesterId = 1;
    string teamId = 3; // xoa username nay ra khoi assignee cua teamtaskId dc chon
    string accessToken = 4;
    string memberEmail = 5;
}
message UpdateMemberReq {
    string requesterId = 1;
    string teamId = 3;
    string accessToken = 4;
    string memberEmail = 5;
    string role=2;
}

message GetAllMemberReq {
    string requesterId = 1;
    string teamId = 3;
    string accessToken = 4;
}
